--- a/multi-page-app-with-react-master/package.json
+++ b/multi-page-app-with-react-master/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "eslint-import-resolver-alias": "^1.1.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-files": "^2.4.8"
   }
 }
