--- a/multi-page-app-with-react-master/package.json
+++ b/multi-page-app-with-react-master/package.json
@@ -44,8 +44,10 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "eslint-import-resolver-alias": "^1.1.2",
     "react": "^16.9.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.9.0",
     "react-files": "^2.4.8"
   }
