--- a/multi-page-app-with-react-master/package.json
+++ b/multi-page-app-with-react-master/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "eslint-import-resolver-alias": "^1.1.2",
     "react": "^16.9.0",
     "react-countup": "^4.3.3",
