--- a/multi-page-app-with-react-master/package.json
+++ b/multi-page-app-with-react-master/package.json
@@ -50,6 +50,7 @@
     "react": "^16.9.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.9.0",
-    "react-files": "^2.4.8"
+    "react-files": "^2.4.8",
+    "react-router-dom": "^5.2.0"
   }
 }
