--- a/multi-page-app-with-react-master/package.json
+++ b/multi-page-app-with-react-master/package.json
@@ -44,6 +44,9 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "@devexpress/dx-react-chart": "^2.7.4",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.4",
+    "@devexpress/dx-react-core": "^2.7.4",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "eslint-import-resolver-alias": "^1.1.2",
